CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

FIND_PACKAGE(deal.II 9.1.0 REQUIRED
  HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR}
  )

DEAL_II_INITIALIZE_CACHED_VARIABLES()

PROJECT(step-3)

ADD_LIBRARY(steplib SHARED step-3.cc)
DEAL_II_SETUP_TARGET(steplib)

SET(TARGET step-3)
SET(TARGET_SRC main.cc step-3.cc)
DEAL_II_INVOKE_AUTOPILOT()
TARGET_LINK_LIBRARIES(step-3 steplib)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
